Modified some spacing issues

--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -79,7 +79,7 @@ $breakpoint-xxl: 1400px;
 ///////////////////* Variables *///////////////////
 
 $component-gap: 5rem;
-$first-top-gap: 5rem;
+$first-top-gap: 4rem;
 
 $mobile-s-width: 300px;
 $mobile-m-width: 556px;
