--- a/src/styles/Home/Home.css
+++ b/src/styles/Home/Home.css
@@ -28,7 +28,7 @@
   align-items: center;
   height: fit-content;
   width: 100%;
-  margin-top: 5rem;
+  margin-top: 4rem;
 }
 .home-wrapper .home-hero {
   display: flex;
