--- a/src/styles/Navbar/Navbar.scss
+++ b/src/styles/Navbar/Navbar.scss
@@ -165,7 +165,7 @@
     z-index: -1;
     position: absolute;
     left: -85px;
-    bottom: 35px;
+    bottom: 25px;
     font-size: 140px;
     color: v.$color-red;
   }
